<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Parent View Controller-->
        <scene sceneID="Cn9-T9-clE">
            <objects>
                <viewController storyboardIdentifier="ParentViewController" id="NvQ-1y-BBI" customClass="ParentViewController" customModule="iOSDC2018Sample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="IhF-tt-lPG">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="TxK-ZU-Kus">
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0l-M6-ccr">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRP-71-hML">
                                        <rect key="frame" x="0.0" y="70.5" width="375" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ehj-ap-lDk">
                                        <rect key="frame" x="0.0" y="141" width="375" height="28"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tx4-Tq-CSI">
                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="28"/>
                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                                <state key="normal" title="Strong">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="tapStrong:" destination="NvQ-1y-BBI" eventType="touchUpInside" id="vhe-Np-HDe"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ake-tj-VES">
                                                <rect key="frame" x="131.5" y="0.0" width="112" height="28"/>
                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="weakButton"/>
                                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                                <state key="normal" title="Weak">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="tapWeak:" destination="NvQ-1y-BBI" eventType="touchUpInside" id="1zB-LD-T3X"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gxn-hj-Vms">
                                                <rect key="frame" x="263.5" y="0.0" width="111.5" height="28"/>
                                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="unownedButton"/>
                                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                                <state key="normal" title="Unowned">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="tapUnowned:" destination="NvQ-1y-BBI" eventType="touchUpInside" id="eTH-Yz-XM3"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="ake-tj-VES" firstAttribute="width" secondItem="tx4-Tq-CSI" secondAttribute="width" id="mWN-Ow-9Zc"/>
                                            <constraint firstItem="Gxn-hj-Vms" firstAttribute="width" secondItem="tx4-Tq-CSI" secondAttribute="width" id="rZB-5w-wpC"/>
                                        </constraints>
                                    </stackView>
                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FJA-a4-bOl">
                                        <rect key="frame" x="0.0" y="219" width="375" height="428"/>
                                    </containerView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="lah-a9-HcF" firstAttribute="bottom" secondItem="TxK-ZU-Kus" secondAttribute="bottom" id="2FH-a2-9sq"/>
                            <constraint firstItem="TxK-ZU-Kus" firstAttribute="leading" secondItem="lah-a9-HcF" secondAttribute="leading" id="64V-TL-W7p"/>
                            <constraint firstItem="TxK-ZU-Kus" firstAttribute="top" secondItem="lah-a9-HcF" secondAttribute="top" id="EHT-GD-bY5"/>
                            <constraint firstItem="lah-a9-HcF" firstAttribute="trailing" secondItem="TxK-ZU-Kus" secondAttribute="trailing" id="ggr-AG-uGC"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="lah-a9-HcF"/>
                    </view>
                    <connections>
                        <outlet property="containerView" destination="FJA-a4-bOl" id="s8Q-nD-IJA"/>
                        <outlet property="textLabel" destination="XRP-71-hML" id="b9m-dv-ESk"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KC7-ph-5ue" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="147" y="-33"/>
        </scene>
        <!--Child View Controller-->
        <scene sceneID="vlL-Gb-U8A">
            <objects>
                <viewController storyboardIdentifier="Child" id="oZj-Wi-Puu" customClass="ChildViewController" customModule="iOSDC2018Sample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="cFD-1i-XIm">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="73h-gx-17o">
                                <rect key="frame" x="159.5" y="319" width="56" height="28"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="executeButton"/>
                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                <state key="normal" title="Button">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="tap:" destination="oZj-Wi-Puu" eventType="touchUpInside" id="Lwa-vE-CFT"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Child" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPB-Do-bPk">
                                <rect key="frame" x="0.0" y="20" width="375" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="73h-gx-17o" firstAttribute="centerY" secondItem="cFD-1i-XIm" secondAttribute="centerY" id="3Ti-7C-CNC"/>
                            <constraint firstItem="73h-gx-17o" firstAttribute="centerX" secondItem="cFD-1i-XIm" secondAttribute="centerX" id="AGS-DB-iCJ"/>
                            <constraint firstItem="jPB-Do-bPk" firstAttribute="leading" secondItem="cFD-1i-XIm" secondAttribute="leading" id="rUK-tp-bMI"/>
                            <constraint firstItem="jPB-Do-bPk" firstAttribute="top" secondItem="201-HZ-ZZb" secondAttribute="top" id="x7H-FE-3dr"/>
                            <constraint firstItem="201-HZ-ZZb" firstAttribute="trailing" secondItem="jPB-Do-bPk" secondAttribute="trailing" id="zgQ-35-U5Y"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="201-HZ-ZZb"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="exs-oY-f8B" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="892" y="-34"/>
        </scene>
    </scenes>
</document>
